unit tests are done and cleaned up the code